# python-project-52

./: .codeclimate.yml  .coveragerc  .env.example  .gitignore  CNAME  Makefile  README.md  nixpacks.toml  pyproject.toml  setup.cfg
.github/workflows/: app-check.yml
locale/ru/LC_MESSAGES/: django.po
task_manager/: json_data.py  mixins.py  settings.py  urls.py
task_manager/fixtures/: labels.json  status.json  task_labels.json  task_users.json  tasks.json  users.json
task_manager/labels/: models.py  tests.py  urls.py  views.py
task_manager/labels/fixtures/: labels.json
task_manager/labels/migrations/: 0001_initial.py
task_manager/status/: admin.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
task_manager/status/fixtures/: status.json
task_manager/status/migrations/: 0001_initial.py  0002_alter_status_created_at.py  0003_alter_status_name.py  0004_alter_status_name.py  0005_alter_status_name.py
task_manager/tasks/: admin.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/fixtures/: status.json  tasks.json  users.json
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_author_alter_task_description_and_more.py  0002_initial.py  0003_alter_task_author_alter_task_executor_and_more.py  0004_alter_task_options_alter_task_author_and_more.py  0005_alter_task_label.py  0006_alter_task_label.py
task_manager/templates/: basic.html  home.html
task_manager/templates/labels/: delete.html  edit.html  main.html
task_manager/templates/status/: create.html  delete.html  edit.html  (+1 more)
task_manager/users/: forms.py  mixins.py  models.py  tests.py  urls.py  views.py
templates/: basic.html  home.html
(+14 files in other folders)
