[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "project №4 task manager on django"
authors = ["Gregtmj <gregtmj@gmail.com>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
python-dotenv = "^0.21.0"
psycopg2-binary = "^2.9.5"
wheel = "^0.38.4"
gunicorn = "^20.1.0"
setuptools = "^65.5.1"
django-bootstrap4 = "^22.2"
django-crispy-forms = "^1.14.0"
django-filter = "^22.1"
rollbar = "^0.16.3"
whitenoise = "^6.2.0"
dj-database-url = "^0.5.0"
coverage = "^6.5.0"
flake8 = "4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
